@startuml

abstract class Encryptor {
    + {abstract} encrypt(String str): String
}

class DES {
    + encrypt(String str): String
}

class DESede {
    + encrypt(String str): String
}

class MD5 {
    + encrypt(String str): String
}

class EncryptorFactory {
    + {static} getEncryptor(String type) : Encryptor
}

class XMLUtil {
    + {static} getEncryptorType() : String
}

DES -up-|> Encryptor
DESede -up-|> Encryptor
MD5 -up-|> Encryptor

EncryptorFactory .up.> DESede
EncryptorFactory .up.> DES
EncryptorFactory .up.> MD5

note as annotation
  AUTHOR : ShuJie Huang
  DATE : 2022.12.17 16:30
end note

@enduml